# audioqualitycheck

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt  start.bat
app/: config.py  main.py
app/api/: router.py  routes_audio_verify.py
app/schemas/: responses.py
app/utils/: audio_io.py  errors.py
app/verification/: constants.py  loudness_clipping.py  models_loader.py  music_detection.py  noise_snr.py  overlap_detection.py  pipeline.py  speaker_diarization.py  speech_pace.py  tone_analysis.py  transcription_asr.py  vad_silence.py
app/workers/: pool.py
docs/: 1_architecture.md  2_features.md  3_pipeline_working.md  4_libraries_and_tools.md  5_api_reference.md  5_docker_deployment.md
scripts/: setup_ffmpeg.py
