[project]
name = "audiocheckapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "numpy>=1.23.0",
    "panns-inference>=0.1.1",
    "pyannote-audio>=4.0.7",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "scipy>=1.10.0",
    "soundfile>=0.14.0",
    "speechbrain>=1.1.0",
    "structlog>=26.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv.workspace]
members = [
    "git",
]
